[package]
name = "rust_audio_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
futures = "0.3.31"
hound = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
tokio = { version = "1.4.0", features = ["full"] }
zip = "2.2.0"
log = "0.4.22"
env_logger = "0.11.5"